--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
 	<meta charset="UTF-8">
-	<title>react</title>
+	<title>私の生きづらさ</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
+	<!--TODO twitterカード ブログカード-->
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-<div id='content'>
-</div>
+<header>
+</header>
+<section class="main">
+	<div id="content">
+	</div>
+</section>
+<footer>
+</footer>
 <script src="./js/bundle.js"></script>
 </body>
 </html>
